...
    required this.emptyStateTextStyle,
    this.emptyText = 'No players yet. Add your first player!',
    required this.addButtonColor,
    required this.addButtonForegroundColor,
    required this.addButtonTextStyle,
    this.addButtonIcon = Icons.add,
    this.addButtonLabel = 'NEW PLAYER',
    this.emptyStateAddButtonTextStyle,
    this.selectedColor,
    this.selectedBorderColor,
    this.unselectedBackgroundColor,
    this.unselectedBorderColor,
    this.cardNameStyle,
...
